added a paragraph for wajis project

--- a/calculator.html
+++ b/calculator.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div class="calculator">
+        <h1>My name is wajhi ul hassan, This is my first ever Web App project</h1>
         <input type="text" class="screen" id="screen" disabled>
         <div class="buttons">
             <button onclick="clearScreen()">C</button>
